unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/sked_Drive_Delivery_Job__c.object-meta.xml
<CustomObject>
    <label>Drive Delivery Job</label>
    <nameField>
        <displayFormat>DDJ-{000000}</displayFormat>
        <label>Drive Delivery Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Delivery Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>