unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Arrive__c.field-meta.xml
<CustomField>
    <fullName>sked_Arrive__c</fullName>
    <label>Arrive</label>
    <type>DateTime</type>
</CustomField>