unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Arrive_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Arrive_Time__c</fullName>
    <label>Arrive Time</label>
    <type>Time</type>
</CustomField>