unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>