unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>sked_Pick_Up__c</fullName>
    <label>Pick Up</label>
    <type>DateTime</type>
</CustomField>