unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Pick_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Pick_Up_Time__c</fullName>
    <label>Pick Up Time</label>
    <type>Time</type>
</CustomField>