unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>