unpackaged/main/default/objects/sked_Drive_Delivery_Job__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>VOL Pick Up</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>